# deltascan

./: LICENSE  README.md  pyproject.toml
deltascan/: __init__.py  _context_columns.py  _decorators.py  _unified_schema.py  delta_scan.py
deltascan/_column/: __init__.py
deltascan/_column/generic/: __init__.py  _alias.py  _base.py  column.py
deltascan/_column/shared/: __init__.py  _base.py  boolean.py  numeric.py  string.py  temporal.py
deltascan/_dataset/: _schema.py  dataset.py
