[project]
name = "deltascan"
version = "0.2.1"
description = "Finds and summarizes the differences between two datasets."
authors = [
    { name = "Zachary Einck", email = "zacharyeinck@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clockwork>=0.6.1",
    "oddments>=0.9.1",
    "pandas>=3.0.2",
    "pathpilot>=0.4.4",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[project.urls]
repository = "https://github.com/zteinck/deltascan"
homepage = "https://github.com/zteinck/deltascan"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"